--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-ds
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +25,7 @@ ds
       </a>
       <div class="btn px-3 py-2 rounded fs-3" onclick="app.carsController.showCars()">🚗</div>
       <div class="btn px-3 py-2 rounded fs-3" onclick="app.housesController.showHouses()">🏠</div>
+      <div class="btn px-3 py-2 rounded fs-3" onclick="app.jobsController.showJobs()">💼</div>
     </nav>
   </header>
   <main>
@@ -33,7 +33,7 @@ ds
       <!-- SECTION car form -->
       <section class="row justify-content-center">
         <div id="form" class="col-12 col-md-8">
-          <form onsubmit="app.housesController.createHouse()" class="row bg-white rounded elevation-2 p-4">
+          <!-- <form onsubmit="app.housesController.createHouse()" class="row bg-white rounded elevation-2 p-4">
             <h3>List a House</h3>
             <div class="mb-2 col-4">
               <label for="name">listing name</label>
@@ -57,7 +57,7 @@ ds
 
             <div class="mb-2 col-4">
               <label for="img">House image</label>
-              <input type="text" name="name" id="name" class="form-control">
+              <input type="url" name="img" id="img" class="form-control">
             </div>
 
             <div class="mb-2 col-4">
@@ -80,7 +80,7 @@ ds
               <button class="btn btn-primary" type="submit">submit</button>
             </div>
 
-          </form>
+          </form> -->
 
           <!-- NOTE label labels the input, for points to the input's id so they are tied, name makes the input grab-able in js -->
 
@@ -145,6 +145,7 @@ ds
           </div>
         </div> -->
         <!--  -->
+
 
       </section>
     </div>
